Added some new features!

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </div>
 
       <div class="total-section">
-        <div>
+        <div class = 'total-list'>
           <h3>Total</h3>
-        </div>
-
-        <div>
           <span class="total-number">£0.00</span>
+        </div>
+        <div class = "delete-section">
+          <button>Delete store items</button>
         </div>
       </div>
     </main>
